test/constBlockConsuming6.slq
// args: --run

def foo(x:ğ”¹)mfree{
	y:=H(x);
	z:=dup(y);
	if z{
		return (z,y); /// error
	}else{
		forget((y,z)=(0,0)); /// TODO error
		return (1,1);
	}
}

def main()â‡’foo(0);
